<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".FirstScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/dark_gray"
            android:textSize="24sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/explore_us"
            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
            android:textColor="@color/dark_gray" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="344dp"
        app:srcCompat="@drawable/screen_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/reset"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/light_blue"
            android:text="@string/log_in"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@color/white"
            android:text="@string/sign_up"
            android:textColor="@color/dark_gray"
            app:cornerRadius="5dp" />
    </LinearLayout>
</LinearLayout>