<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SignUp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_action_backarrow" />

    <TextView
        android:id="@+id/signUp_title"
        style="@style/title"
        android:text="@string/sign_up" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/silver"
            android:textColor="@color/silver"
            android:textColorHint="@color/silver"
            app:boxStrokeColor="@color/light_blue"
            app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:hintTextColor="@color/light_blue">

            <EditText
                android:id="@+id/editTextName"
                style="@style/editText"
                android:hint="@string/name_label"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/silver"
            android:textColor="@color/silver"
            android:textColorHint="@color/silver"
            app:boxStrokeColor="@color/light_blue"
            app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:hintTextColor="@color/light_blue">

            <EditText
                android:id="@+id/forgotPasswordByEmail"
                style="@style/editText"
                android:hint="@string/email_entering"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/silver"
            android:textColor="@color/silver"
            android:textColorHint="@color/silver"
            app:boxStrokeColor="@color/light_blue"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:hintTextColor="@color/light_blue"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/logInPassword"
                style="@style/editText"
                android:hint="@string/password_entering"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/reset"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/light_blue"
            android:text="@string/sign_up"
            app:cornerRadius="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/having_account_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/already_have_an_account"
            android:textColor="@color/silver"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Sign_In_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="logIn"
            android:padding="7dp"
            android:text="@string/sign_in"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>