<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".pages.ProductData">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/productDataToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/productDataToolbar">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/productDataToolbar"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/product_photo"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <ImageView
                    android:id="@+id/productImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/baseline_image_120" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColorHint="@color/gray"
                    app:boxStrokeColor="@color/light_blue"
                    app:hintTextColor="@color/light_blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/product_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColorHint="@color/gray"
                    app:boxStrokeColor="@color/light_blue"
                    app:hintTextColor="@color/light_blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/product_price" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/size"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </FrameLayout>

                    <LinearLayout
                        android:id="@+id/smallSizesLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/XS_checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/light_blue"
                            android:text="XS"
                            android:textColor="@color/gray"
                            android:textColorHighlight="@color/light_blue"
                            android:textColorLink="@color/light_blue"
                            app:buttonTint="@color/light_blue" />

                        <CheckBox
                            android:id="@+id/S_checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="S"
                            android:textColor="@color/gray"
                            app:buttonTint="@color/light_blue" />

                        <CheckBox
                            android:id="@+id/M_checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="M"
                            android:textColor="@color/gray"
                            app:buttonTint="@color/light_blue" />

                        <CheckBox
                            android:id="@+id/L_checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="L"
                            android:textColor="@color/gray"
                            app:buttonTint="@color/light_blue" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/largeSizesLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/XL_checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="XL"
                            android:textColor="@color/gray"
                            app:buttonTint="@color/light_blue" />

                        <CheckBox
                            android:id="@+id/XXL_checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="2XL"
                            android:textColor="@color/gray"
                            app:buttonTint="@color/light_blue" />

                        <CheckBox
                            android:id="@+id/XXXL_checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="3XL"
                            android:textColor="@color/gray"
                            app:buttonTint="@color/light_blue" />

                        <CheckBox
                            android:id="@+id/XXXXL_checkBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="4XL"
                            android:textColor="@color/gray"
                            app:buttonTint="@color/light_blue" />
                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:textColorHint="@color/gray"
                    app:boxStrokeColor="@color/light_blue"
                    app:hintTextColor="@color/light_blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productDescription"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:hint="@string/product_description" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/uploadPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/white"
                    android:text="Upload Photo"
                    android:textColor="@color/light_blue"
                    app:cornerRadius="7dp"
                    app:strokeColor="@color/light_blue"
                    app:strokeWidth="1dp" />

                <Button
                    android:id="@+id/saveProductData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/light_blue"
                    android:text="@string/save"
                    app:cornerRadius="7dp" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</layout>